Align photos show they show on mobile platform correctly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,10 @@ h3 {
     color: #252525;
 }
 
+.hidden-heading {
+    display: none;
+}
+
 /* Header */
 header {
     background-color: #ffffff;
@@ -185,6 +189,11 @@ main {
     /*Override the heading colour set in general styles */
     color: #fafafa;
     
+}
+
+/*Gallery page*/
+#photos img {
+    width: 100%;
 }
 
 /* Footer */
